--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "npm run generate && type nul > .output/public/.nojekyll && gh-pages -d .output/public --dotfiles"
   },
   "dependencies": {
+    "@nuxt/content": "^3.11.2",
     "@nuxtjs/color-mode": "^3.5.2",
     "@vueuse/core": "^13.5.0",
     "js-yaml": "^4.1.0",
