--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/content": "^3.11.2",
     "@nuxtjs/color-mode": "^3.5.2",
     "@vueuse/core": "^13.5.0",
+    "better-sqlite3": "^12.6.2",
     "js-yaml": "^4.1.0",
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
