ci(deploy): migrate workflow to pnpm
將 GitHub Actions 部署流程從 npm 遷移至 pnpm。

- 引入 pnpm/action-setup 以配置 pnpm 環境。
- 更新 actions/setup-node 設定以啟用 pnpm 快取。
- 將依賴安裝指令更改為 `pnpm install --frozen-lockfile` 以確保依賴版本一致性。
- 將建置指令更改為 `pnpm run generate`。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,54 @@
 name: Deploy to GitHub Pages
 
 on:
-  # 當推送到 main 分支時觸發部署
   push:
     branches: ["main"]
-
-  # 允許從 Actions 頁籤手動觸發
   workflow_dispatch:
 
-# 設定 GITHUB_TOKEN 的權限，允許讀取儲存庫並寫入 Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# 只允許同時進行一個部署，避免衝突
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # 建置工作
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 1. 安裝 pnpm 環境
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10 # 指定 pnpm 版本，建議使用與您本機相近的主版本
+          run_install: false
+
+      # 2. 設定 Node.js 並啟用 pnpm 快取
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "24" # Nuxt 4 建議使用較新版本 Node
-          cache: 'npm'
+          node-version: "24"
+          cache: 'pnpm' # 這裡指定快取 pnpm 的依賴，大幅加速部署
 
+      # 3. 安裝依賴
+      # --frozen-lockfile 等同於 npm ci，嚴格依照 pnpm-lock.yaml 安裝
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
+      # 4. 建置網站
       - name: Build with Nuxt
-        # 這裡會執行 nuxt generate，並根據我們設定的 github_pages preset 輸出
-        run: npm run generate
+        run: pnpm run generate
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .output/public # Nuxt 的靜態產出預設目錄
+          path: .output/public
 
-  # 部署工作
   deploy:
     environment:
       name: github-pages
